--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <body>
     <div class="container">
       <div class="card-white">
-        <img src="images/profile_image.jpg" id="profile" alt="Profile image">
+        <img src="./images/profile_image.jpg" id="profile" alt="Profile image">
         <h1>Ben Skingsley</h1>
         <h2>👨‍💻 Programmer - London 📍</h2>
         <p>I graduated from Bristol University in 2018 with an Economics degree 💰. Worked Sales and BizDev roles for startups for
